[package]
name = "janus"
version = "0.1.0"
edition = "2021"
authors = ["KevinChueh <slime21023@gmail.com>"]
description = "A lightweight process manager for container environments"
license = "MIT"
readme = "README.md"

[dependencies]
chrono = "0.4.40"
clap = { version = "4.5.36", features = ["derive"] }
colored = "3.0.0"
serde = { version = "1.0.219", features = ["derive"] }
signal-hook = { version = "0.3.17", features = ["iterator"] }
thiserror = "2.0.12"
toml = "0.8.20"

[dev-dependencies]
tempfile = "3.8"
assert_cmd = "2.0"
predicates = "3.0"